# routes/user.js
@@ -4,11 +4,12 @@ const userController = require("../controllers/user.js");
 const auth = require('../middlewares/auth');
 
 router.get("/:id", userController.getUserById);
-router.get("/:id/matches", userController.getUserMatches);
-router.get("/:id/tournaments", userController.getUserTournaments);
 
 router.post("/register", userController.signup);
 router.post("/login", userController.login);
+
+router.get("/:id/matches", userController.getUserMatches);
+router.get("/:id/tournaments", userController.getUserTournaments);
 
 router.put("/:id", auth, userController.updateUser);
 
